lucia-macros/tests/ui/error_enum/bad_req.stderr
error: Request data must end with the `Req` suffix.
 --> tests/ui/error_enum/bad_req.rs:8:14
  |
8 |   pub struct Rfdsqw;
  |              ^^^^^^
